# lvgltesting

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lekton_200.c  lv_conf.h  lvgltest  main.c  main.h  mainGUI.c  mainGUI.h  pos1.c  pos2.c  pos3.c  pos4.c  pos5.c  pos6.c  pos7.c  pos8.c  speedometer_font.c
